--- a/cv_site/css/style.css
+++ b/cv_site/css/style.css
@@ -185,7 +185,7 @@ header, #informations p, #article_hover > li:last-child ul li a, form input[type
     right: 5.4em;
 }
 
-#main_nav > div:not(:first-child) {
+#main_nav > div#last_item {
     order: 1;
 }
 
@@ -276,14 +276,29 @@ header, #informations p, #article_hover > li:last-child ul li a, form input[type
     text-decoration: underline;
 }
 
+#services {
+    padding: 0 4.6875em;
+    margin-top: 5em;
+}
+
+#landing_image, img#skills {
+    border-radius: 1.25em;
+}
+
+#services #flex_container {
+    display: flex;
+    justify-content: space-between;
+}
+
 #informations {
-    max-width: 18em;
-    margin-left: 3.8em;
-    margin-top: 9em;
+    min-width: 18em;
     padding: 2.5em 1.875em;
     border-radius: 1.25em;
     text-align: left;
     font-size: 1.25em;
+    max-height: 511px;
+    order: -1;
+    align-self: center;
 }
 
 #gender {
@@ -306,6 +321,11 @@ main {
     border-radius: 0.5em;
     margin-bottom: 1em;
     padding: 0.5em 0.75em;
+}
+
+img#skills {
+    width: auto;
+    height: 100vh;
 }
 
 #services_list {
@@ -797,43 +817,67 @@ form input[type='submit'] {
 
 @media (width <= 1500px) {
 
-    #burger_menu {
-        display: block;
-        margin-right: auto;
-        cursor: pointer;
-        width: 2em;
-        height: 1.5em;
-        position: absolute;
-    }
-
-    #main_nav div#bla {
+    #main_nav div#last_item {
         margin-left: auto;
     }
 
     #logo {
-        margin-left: 5em;
+        margin-left: 3em;
+    }
+
+    #burger_menu {
+        display: initial;
+        width: 2em;
+        height: 1.5em;
+        position: relative;
     }
 
     #burger_menu span {
+        width: 100%;
+        height: 0.2em;
         display: block;
         position: absolute;
         top: 50%;
+        transform: translateY(-50%);
+        background-color: #fff;
+        transition: background-color 0.2s ease-in-out;
     }
 
     #burger_menu span:before, #burger_menu span:after {
         content: '';
-        width: 2em;
+        width: 100%;
         height: 0.2em;
         background-color: #fff;
         position: absolute;
+        transition: transform 0.2s ease-in-out;
     }
 
     #burger_menu span:before {
-        top: -0.5em;
+        transform: translateY(-0.5em);
     }
 
     #burger_menu span:after {
-        top: 0.5em;
+        transform: translateY(0.5em);
+    }
+
+    div#burger_menu.disappeared_middle_line span {
+        background-color: transparent;
+    }
+
+    div#burger_menu.disappeared_middle_line span:before {
+        transform: translateY(0) rotateZ(45deg);
+    }
+
+    div#burger_menu.disappeared_middle_line span:after {
+        transform: translateY(0) rotateZ(-45deg);
+    }
+
+    .first_line_animation {
+        transform: rotateZ(45deg);
+    }
+
+    .second_line_animation {
+        transform: rotateZ(-45deg);
     }
 
     #main_nav {
@@ -921,9 +965,6 @@ form input[type='submit'] {
     #nav_list.remove_no_display {
         display: initial;
     }
-}
-
-@media (width <= 1500px) and (width > 750px) {
 
     #formations button, #langages button {
         display: none;
@@ -945,12 +986,12 @@ form input[type='submit'] {
     }
 
     #hepl img, #helmo img, #formation img, #secondaire img {
-        object-fit: cover;
         width: 100%;
+        object-fit: cover;
     }
 
     #formations #first_slider > li {
-        min-width: 100Px;
+        min-width: 100px;
     }
 
     #html img, #css img, #php img, #javascript img {
@@ -1102,8 +1143,11 @@ form input[type='submit'] {
         max-width: 100vh;
     }
 
-    .cross_animation {
-        transform: rotate(45deg);
-        transition: transform 0.3s ease-in-out;
+    #formations ul#first_slider, #langages ul#second_slider {
+        display: block;
+    }
+
+    #formations ul#first_slider>li:not(:last-child), #langages ul#second_slider>li:not(:last-child) {
+        margin-bottom: 1.25em;
     }
 }
